    which cleans up a lot of special-case code in various methods and
    caches additional values to speed up most configurations.

  - Add a PathAccept validator to the list of new canned PathOption
    validators.

  From Christoph Schulz:

  - Add support for $CONFIGUREDIR and $CONFIGURELOG variables to control
    the directory and logs for configuration tests.

  From Craig Scott:

  - Have the Fortran module emitter look for Fortan modules to be created
    relative to $FORTRANMODDIR, not the top-level directory.

  - When saving Options to a file, run default values through the
    converter before comparing them with the set values.  This correctly
    suppresses Boolean Option values from getting written to the saved
    file when they're one of the many synonyms for a default True or
    False value.

  - Fix the Fortran Scanner's ability to handle a module being used
    in the same file in which it is defined.

  From Jeff Squyres:

  - Documentation changes:  Use $CPPDEFINES instead of $CCFLAGS in man
    page examples.

  From Levi Stephen:

  - Allow $JARCHDIR to be expanded to other construction variables.

  From Steve-o:

  - Add the -KPIC option by default when compiling shared objects on
    Solaris.

  - Change the default suffix for Solaris objects to .o, to conform to
    Sun WorkShop's expectations.  Change the profix to so_ so they can
    still be differentiated from static objects in the same directory.

  From Amir Szekely:

  - When calling the resource compiler on MinGW, add --include-dir and
    the source directory so it finds the source file.

  - Update EnsureSConsVersion() to support revision numbers.

  From Greg Ward:

  - Fix a misplaced line in the man page.

  From Christoph Wiedemann:

  - Add an Environment.SetDefault() method that only sets values if
    they aren't already set.

  - Have the qt.py Tool not override variables already set by the user.

  - Add separate $QT_BINPATH, $QT_CPPPATH and $QT_LIBPATH variables